.provarCaches/00D6C0000000xA6UAI/objects/PHSS_TriggerSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>PHSS_TriggerSettings</description>
    <fields>
        <fullName>AccountContactRelationTrigger_Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AccountContactRelationTrigger Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AccountTrigger_Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the AccountTrigger is disabled.</description>
        <inlineHelpText>When checked, the AccountTrigger is disabled. NOTE: Only methods using checkbox will be disabled.</inlineHelpText>
        <label>AccountTrigger Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AllDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>All Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCOrderItemTrigger_Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the CCOrderItemTrigger is disabled</description>
        <inlineHelpText>When checked, the CCOrderItemTrigger is disabled. NOTE: Only methods using checkbox will be disabled.</inlineHelpText>
        <label>CCOrderItemTrigger Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CaseDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Case Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CertificationProvisioningDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Certification Provisioning Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContactTrigger_Bucket_Assign_Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ContactTrigger Bucket Assign Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContactTrigger_Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the ContactTrigger is disabled</description>
        <inlineHelpText>When checked, the ContactTrigger is disabled. NOTE: Only methods using checkbox will be disabled.</inlineHelpText>
        <label>ContactTrigger Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContentVersionDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Content Version Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FulfillmentTriggerDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the Fulfillment Trigger is disabled.</description>
        <inlineHelpText>When checked, the Fulfillment Trigger is disabled. NOTE: Only methods using checkbox will be disabled.</inlineHelpText>
        <label>Fulfillment Trigger Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FulfilmentItemTriggerDisable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the FulfilmentItemTriggerHelper is disabled. NOTE: Only methods using checkbox will be disabled.</description>
        <label>FulfilmentItemTriggerDisable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ILTRosterTrigger_Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the ILTRosterTrigger is disabled</description>
        <inlineHelpText>When checked, the ILTRosterTrigger is disabled. NOTE: Only methods using checkbox will be disabled.</inlineHelpText>
        <label>ILTRosterTrigger Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LearningPlanAssignmentTriggerTSDisable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box to disable LearningPlanAssignmentTriggerTS on redwing__Training_Plan_Assignment__c object.</description>
        <inlineHelpText>Check this box to disable LearningPlanAssignmentTriggerTS on redwing__Training_Plan_Assignment__c object.</inlineHelpText>
        <label>LearningPlanAssignmentTriggerTSDisable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LearningTriggerDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LearningTriggerDisabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Open_Order_Processing_Trigger_Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Open Order Processing Trigger Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PHSSinitQRCodeIdentifierDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the PHSS_initQRCodeIdentifier trigger is disabled. NOTE: Only methods using checkbox will be disabled.</description>
        <inlineHelpText>When checked, the PHSS_initQRCodeIdentifier trigger is disabled. NOTE: Only methods using checkbox will be disabled.</inlineHelpText>
        <label>PHSS_initQRCodeIdentifier Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PriceListItemTriggerDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PriceListItemTriggerDisabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StudentBulkUploadTriggerDisable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>StudentBulkUploadTriggerDisable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TransactionPaymentTriggerHelperDisable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the TransactionPaymentTriggerHelper is disabled. NOTE: Only methods using checkbox will be disabled.</description>
        <inlineHelpText>When checked, the TransactionPaymentTriggerHelper is disabled. NOTE: Only methods using checkbox will be disabled.</inlineHelpText>
        <label>TransactionPaymentTriggerHelperDisable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserProvisioningDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>User Provisioning Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UserTrigger_Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the UserTrigger is disabled.</description>
        <inlineHelpText>When checked, the UserTrigger is disabled. NOTE: Only methods using checkbox will be disabled.</inlineHelpText>
        <label>UserTrigger Disabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VoucherTriggerDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VoucherTriggerDisabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VoucherTriggerOnlineHighWatermark__c</fullName>
        <description>Maximum number of vouchers to create for online courses when low watermark is reached.  Default 150.</description>
        <label>VoucherTriggerOnlineHighWatermark</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VoucherTriggerOnlineLowWatermark__c</fullName>
        <description>When the number of Issued vouchers for an online course drops to this level, another (High Watermark-Low Watermark) vouchers are created in Issued status</description>
        <label>VoucherTriggerOnlineLowWatermark</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>eCommerceExportUseNewLearningPlanId__c</fullName>
        <defaultValue>true</defaultValue>
        <label>eCommerceExportUseNewLearningPlanId</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>skedJobAlloctoILTInstructTriggerDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>skedJobAlloctoILTInstructTriggerDisabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>skedJobtoILTClassFullServiceDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disables the job-to-ILT class integration for full service jobs</description>
        <label>skedJobtoILTClassFullServiceDisabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>skedJobtoILTClassTriggerDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>skedJobtoILTClassTriggerDisabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>skedLocationtoILTLocationTriggerDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>skedLocationtoILTLocationTriggerDisabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>skedResourcetoILTInstructTriggerDisabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>skedResourcetoILTInstructTriggerDisabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>trgr_Channel_Compensation_Disabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the trgr_Channel_Compensation Trigger is disabled.</description>
        <inlineHelpText>When checked, the trgr_Channel_Compensation Trigger is disabled. NOTE: Only methods using checkbox will be disabled.</inlineHelpText>
        <label>trgr_Channel_Compensation Disabled</label>
        <type>Checkbox</type>
    </fields>
    <label>PHSS Trigger Settings</label>
</CustomObject>